objects/Feature__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Track what Copado features the installation has access to.</description>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Feature</label>
</CustomObject>